--- a/readme
+++ b/readme
@@ -1,1 +1,13 @@
 initial
+jar files are located in: /war/WEB-INF/lib
+Jar files used for this project are:
+jsr107cache-1.1.jar
+jdo2-api-2.3-eb.jar
+geronimo-jta_1.1_spec-1.1.1.jar
+geronimo-jpa_3.0_spec-1.1.1.jar
+datanucleus-jpa-1.1.5.jar
+datanucleus-core-1.1.5.jar
+datanucleus-appengine-1.0.9.final.jar
+appengine-jsr107cache-1.5.1.jar
+appengine-api-labs-1.5.1.jar
+appengine-api-1.0-sdk-1.5.1.jar
